8205440: [8u] DWORD64 required for later Windows compilers

Reviewed-by: dholmes